--- a/html/assignmentPage.html
+++ b/html/assignmentPage.html
@@ -15,9 +15,9 @@
     <nav id="main-nav">
         <div id="MenuBar">
             <ul>
-                <li><a class="menu" href="/html/lectureFun.html">강의 기능</a></li>
-                <li><a class="menu" href="/html/ssignmentFun.html">과제 기능</a></li>
-                <li><a class="menu" href="/html/calculateFun.html">계산 기능</a></li>
+                <li><a class="menu" href="./lecturePage.html">강의 기능</a></li>
+                <li><a class="menu" href="./assignmentPage.html">과제 기능</a></li>
+                <li><a class="menu" href="./calculatePage.html">계산 기능</a></li>
             </ul>
         </div>
     </nav>
