--- a/html/LoginPage.html
+++ b/html/LoginPage.html
@@ -6,7 +6,6 @@
     <title>과제도우미</title>
     <link rel="stylesheet" href="lecture.css">
     <link rel="stylesheet" href="menu.css">
-
 </head>
 
 <body>
@@ -16,20 +15,13 @@
     <nav id="main-nav">
         <div id="MenuBar">
             <ul>
-                <li><a class="menu" href="lectureFun.html">강의 기능</a></li>
-                <li><a class="menu" href="assignmentFun.html">과제 기능</a></li>
-                <li><a class="menu" href="calculateFun.html">계산 기능</a></li>
+                <li><a class="menu" href="./lecturePage.html">강의 기능</a></li>
+                <li><a class="menu" href="./assignmentPage.html">과제 기능</a></li>
+                <li><a class="menu" href="./calculatePage.html">계산 기능</a></li>
             </ul>
         </div>
     </nav>
     <section id="main-section">
-        <article>
-            <div class="timer-span"></div>
-        </article>
-        <article>
-            <div class="eclass"></div>
-            <div class="todo_list"> </div>
-        </article>
     </section>
 </body>
 
