add function timer, stopwatch and mod html assignment, calc, lecturePage

--- a/html/assignmentPage.html
+++ b/html/assignmentPage.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>과제도우미</title>
-    <link rel="stylesheet" href="assignment.css">
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="public/assignment.css">
+    <link rel="stylesheet" href="public/menu.css">
 </head>
 
 <body>
