--- a/html/calculatePage.html
+++ b/html/calculatePage.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>과제도우미</title>
-    <link rel="stylesheet" href="calculatePage.css">
-    <link rel="stylesheet" href="menu.css">
-    <link rel="stylesheet" href="calculator.css">
-    <script type="text/javascript" src="calculatorFunction.js"></script>
+    <link rel="stylesheet" href="public/calculatePage.css">
+    <link rel="stylesheet" href="public/menu.css">
+    <link rel="stylesheet" href="public/calculator.css">
+    <script type="text/javascript" src="public/calculatorFunction.js"></script>
 </head>
 <body>
     <header id="main-header">
