--- a/html/lecturePage.html
+++ b/html/lecturePage.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>과제도우미</title>
-    <link rel="stylesheet" href="lecturePage.css">
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="public/lecturePage.css">
+    <link rel="stylesheet" href="public/menu.css">
 
 </head>
 
